# pocketdarwin

./: .gitignore  .gitmodules  Applications  Makefile  README.md  devcontainer.json  dockerfile  flake.nix
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: discord-activity.yml
Android/SBAndroid/: settings.gradle.kts
Android/SBAndroid/app/: build.gradle.kts
Android/touchHLE/: Cargo.toml  build.rs  log.txt  touchHLE_log.txt
Android/touchHLE/.cargo/: config.toml
Android/touchHLE/src/: cpu.rs  lib.rs  mem.rs  paths.rs  systembundle.rs  vfs.rs
Applications/Installer.app/: Installer.m
BuildSystem/: README.md  pdbuild.swift
Developer/FreeDarwinUserlandSDK/: CoreDarwin  Frameworks  Kernel  Makefile.darwinx86
Developer/FreeDarwinUserlandSDK/Kernel/: osfmk
Developer/PocketDarwinSDK/: CMakeLists.txt
Developer/PocketDarwinSDK/cmake/: Paths.cmake  Tools.cmake  Version.cmake  framework.cmake  kext.cmake  mig.cmake
Developer/SDKs/: README.md
Developer/SDKs/PocketDarwin.sdk/: SDKSettings.json
Developer/SDKs/Toolchains/: pocketdarwin.toolchain.cmake
Developer/SDKs/scripts/: hello_build.sh  pd_cc.sh  pd_cxx.sh  pd_env.sh  pd_ld.sh  pd_pkgconfig_env.sh  pd_target_env.sh  pd_toolchain_path.sh  populate_sysroot.sh  set_sdk_version.sh  sysroot_manifest.sh  toolchain_smoke_test.sh  validate_sysroot.sh  verify_sysroot.sh
Developer/clang.1/: Makefile  clang.1.cpp
Frameworks/MakeKit/: CoreObjc.csh  CoreObjc.fish  CoreObjc.sh  Makefile
Frameworks/TerminalKit/: TerminalView.h  TerminalView.m  terminfo
Kexts/DriverKitStubs/: README.md
Kexts/FramebufferDriver/: FramebufferDriver.cpp  FramebufferDriver.hpp  Info.plist
OCMobile/: .gitignore  BootMenu.c  Framebuffer.c  Makefile  TODO.md  bootlib.c  bootstd.h  config.dtb  config.dts  kernel_patcher.c  loader.c  platform.c
OCMobile/Platform/: Cargo.toml
OCMobile/Tools/: patch_kernel.sh
OCMobile/UEFICompat/: README.md  compat.c  install_to_ramdisk.sh  uefi_compat.rc
Platform/: .gitignore
System/: Makefile  xnubuild  xnubuild.command
System/Applications/: common-app.mk
System/Applications/Settings/: Makefile  Makefile.am  Makefile.in  Settings  configure  configure.ac  configure~
System/Applications/Settings/Headers/: PSAboutController.h  PSGeneralController.h  PSSettingsRootController.h  PSSpecifier.h  PSTableCell.h  PSViewController.h  PSWiFiController.h  SettingsAppDelegate.h
System/Applications/Settings/Resources/: Info.plist
System/Applications/Settings/Sources/: PSAboutController.m  PSDisplayController.m  PSGeneralController.m  PSNetworkController.m  PSSettingsRootController.m  PSSoundController.m  PSSpecifier.m  PSTableCell.m  PSViewController.m  PSWiFiController.m  SettingsAppDelegate.m  main.m
System/Applications/Settings/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
System/Applications/freeboard/: .gitignore  AUTOTOOLS_COMPLETE.md  AUTOTOOLS_GUIDE.md  AppBundle.h  AppScanner.mm  FIXED_AND_READY.md  FreeBoardFramebuffer.h  FreeBoardUI.cpp  FreeBoardUI.h  FreeboardAPI.cpp  FreeboardAPI.h  IMPLEMENTATION_SUMMARY.md  MODERN_APPROACH.md  Makefile  Makefile.am  Makefile.example  Makefile.in  Makefile.new  README.md  README_FRAMEBUFFER.md  README_iOS5.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure~  freeboard_framebuffer.c  freeboard_linuxkit.c  freeboard_new  libtool  main.cpp  main_new.cpp  stb_image.h  system_info_example  system_info_example.c  test_freeboard.sh
System/Applications/freeboard/.deps/: freeboard-AppScanner.Po  freeboard-FreeboardAPI.Po  freeboard-main.Po  freeboard_new-FreeBoardUI.Po  freeboard_new-main_new.Po  libfreeboard_la-FreeboardAPI.Plo
System/Applications/freeboard/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.3  traces.4  traces.5
System/Applications/freeboard/m4/: ax_cxx_compile_stdcxx.m4
System/Applications/springboard/: .gitignore  Makefile.am  SpringBoard  clangtest.m  configure.ac  configure~
System/Applications/springboard/Headers/: SBApplication.h  SBApplicationIcon.h  SBIconList.h  SBSpringBoardView.h  SBStatusBar.h  SpringBoardAppDelegate.h
System/Applications/springboard/Resources/: Info.plist
System/Applications/springboard/Sources/: SBApplication.m  SBApplicationIcon.m  SBDock.m  SBIconList.m  SBSpringBoardView.m  SpringBoardAppDelegate.m  main.m
System/Boot/: .gitignore  buildIterludeBootImage.command
System/Boot/interlude/: CHANGELOG.md  InterludeIO.c  InterludeIO.h  JSONParser.c  JSONParser.h  Linux2DarwinBridge.cxx  Linux2DarwinBridge.h  Makefile  Makefile.am  Makefile.in  README.md  build.sh  config.status  configure  configure.ac  configure~  darwin_interlude.c  l2d_dump.cpp  libtool  linuxd
System/Boot/interlude/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.2  traces.3
System/Boot/interlude/build-aux/: Makefile  Makefile.am  Makefile.in
System/Boot/interlude/vmapple/: vmapple-select.c  vmapple.c  vmapple.make
System/Frameworks/: Example.cmake  Frameworks.cmake  README.md
System/Patches/: AddIORPCMessageFromMachStub.patch  ForceGenericBootAbi.patch  availability.pl  patch_IORPCMessageFromMach.patch
System/SystemBundle/: .gitignore  Application.py  pdbundle.spec  pdsys.rb  requirements.txt
System/darwinKernel/: .gitignore  BUILD_ISSUE_RESOLVED.md  BUILD_STATUS.md  COREDARWIN_IMPLEMENTATION_COMPLETE.md  GENERIC_ARM_CONFIG.md  GENERIC_ARM_PATCH_COMPLETE.md  LAUNCHD_PATCH_COMPLETE.md  Makefile  Makefile.darwin  README.md  UPDATED_COREFOUNDATION_STRATEGY.md  build_kernel.sh  link_kernel.sh  patch_launchd_coredarwin.sh  patch_launchd_opensource_cf.sh  patch_launchd_simple_cf.sh  test_generic_config.sh
Tools/pdpack/: Cargo.toml  dummy_kernel.c
Userland/MobileManager/: PDBatteryManager.h
autom4te.cache/: output.0  requests  traces.0
istdlib/: Cargo.toml  build.rs
istdlib/include/: istdlib.h
istdlib/src/: __rust_syms.rs  istdlib.c  lib.rs
istdlib/tests/: 00-lib.rs
scripts/: make_dmg.command
(+290 files in other folders)
